Resolve issue 106 (#109)
* removed second dcroll

* removed overflow

* updated minheight

* hide scrollbar

--- a/src/stylesheets/addEditCourse.css
+++ b/src/stylesheets/addEditCourse.css
@@ -5,7 +5,15 @@
   display: flex;
   min-height: calc(100vh - 60px);
   background-color: #f8f9fa;
+  overflow-y: auto;
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
 }
+
+.student-area-container::-webkit-scrollbar {
+  display: none; 
+}
+
 
 .student-display-area {
   flex: 1;
